# cmake_protobuf_example

./: CMakeLists.txt  README.md  bar.cpp  foo.proto
